chore: update test

--- a/public/openapi/index.html
+++ b/public/openapi/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>gRPC-Kit</title>
+    <title>mingqing-apilogin-v1</title>
     <style>
       body {
         margin: 0;
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <redoc spec-url='/openapi-spec/api/mingqing/apilogin/v1/microservice.swagger.json'></redoc>
+    <redoc spec-url='./microservice.swagger.json'></redoc>
     <script src="./redoc.standalone.js"> </script>
   </body>
 </html>
